--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/pruelas/odin-TodoList#readme",
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "csv-loader": "^3.0.5",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
